# Stage_Two

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Source/: concat_project.py
Source/App/: main.cpp
Source/Config/: ConfigParser.cpp  ConfigParser.h  FileWatcher.cpp  FileWatcher.h
Source/Core/: AppConstants.h  AppState.cpp  AppState.h  AppStateDashboard.cpp  AppStateDashboard.h  AppStateGTR.cpp  AppStateGTR.h  AppStateTransformer.cpp  AppStateTransformer.h  CoreGlobals.cpp  CoreGlobals.h  DisplayState.cpp  DisplayState.h  GtrSlotConfig.h  GtrWorkspaceConfig.h  Logger.cpp  Logger.h  MidiData.h  PathConstants.h  Preset.h  Utils.cpp  Utils.h
Source/GTR/: GTRDisplayState.cpp  GTRDisplayState.h  GTRPreset.h  GtrSendLights.cpp  GtrSendLights.h  GtrSlotConfig.h
Source/Logic/: PresetManager.cpp  PresetManager.h
Source/MIDI/: EvaluationEngine.cpp  EvaluationEngine.h  GtrSendLights.cpp  GtrSendLights.h  MidiUtils.cpp  MidiUtils.h
Source/UI/: MainWindow.cpp  MainWindow.h  UIConstants.h  Win32App.cpp  Win32App.h
